# socket-example

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test.cbp  test_char.c  text.txt
01-simple_socket_example/: CMakeLists.txt  HELLO.cbp  Makefile  README.md  client.c  cmake_install.cmake  server.c
02-simple_socket-echo/: 02-simple_socket-echo.cbp  CMakeLists.txt  Makefile  README.md  client.c  cmake_install.cmake
03-simple_socket-select/: Makefile  client  client.c  server  server.c
c/array/: Makefile  assign  assign.c  day_mon1.c  day_mon2.c  designate.c  node_data.c  order  order.c  pnt_add  pnt_add.c  sum_arr2  sum_arr2.c  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
c/file/: CMakeLists.txt  Makefile  cmake_install.cmake  file.cbp  ls.output  test6.c  test7.c
c/others/: Makefile  exec.c  execDemo.c  exit.c  file.txt  file1.c  file2  file2.c  fork.c  fork1.c  fork2.c  fork3.c  fork4.c  fork5.c  fork6.c  fputs.c  fputs2.c  strings1.c  strptr.c  wait1.c  wait2.c  wait3.c
c/pointer/: ptr_ops  ptr_ops.c  test1  test1.c  test2  test2.c
c/pointers/: test1.c  test2.c  test3  test3.c  test4  test4.c
c/select/: CMakeLists.txt  Makefile  cmake_install.cmake  select1.c  select2  select2.c
c/string/: CMakeLists.txt  addresses.c  dyn_arr.c  fgets1.c  getsputs.c  p_and_s.c  string1  string1.c  strptr.c
c/struct/: CMakeLists.txt  Makefile  struct.cbp  (+7 more)
libuv-test/: README.md  kqueue  kqueue.c
simple_socket_example/: README.md  client.c  server.c
test_makefile/: Makefile  test.c
